# RL-Matting-Agent

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: img_processor.rs  lib.rs  main.rs  ml_engine.rs  rembg_processor.rs
src/components/: ControlPanel.tsx  GlassCard.tsx  ImageCanvas.tsx  MetricsChart.tsx  ModelStatusCard.tsx
src/hooks/: useRlStepListener.ts
