[package]
name = "rl-matting-app"
description = "RL Matting Agent - Weakly Supervised Object Localization"
version = "0.1.0"
authors = ["you"]
edition = "2021"

[lib]
name = "rl_matting_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
imageproc = "0.25"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "coreml", "ndarray", "download-binaries", "tls-rustls"] }
rayon = "1.10"
base64 = "0.22"
ndarray = "0.17"

[features]
default = []
